--- a/css/styleContact.css
+++ b/css/styleContact.css
@@ -1,12 +1,10 @@
 html, body{
-    background-color: rgb(112, 99, 83);
+    background-color: rgb(70, 119, 161);
     width: 100%;
     margin: 0;
     display: flex;
     flex-direction: column;
-
 }
-
 
 .mainContainer{
     display: flex;
@@ -25,7 +23,6 @@ html, body{
     height: 20em;
     width: 100%;
 }
-
 
 /*Menú inferior*/
 .menuContainer{
@@ -56,12 +53,6 @@ html, body{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.linkMenu{
-    width: 60%;
-    height: 100%;
-    font-size: 0;
 }
 
 .menuWork{
@@ -102,38 +93,39 @@ html, body{
     border-radius: 1.5em;
 }
 
+.linkMenu{
+    width: 60%;
+    height: 100%;
+    font-size: 0;
+}
+
 /*Cambio de iconos a texto al llegar a 568px*/
 @media screen and (min-width: 568px){
-    .menuHome{
-        background-image: url(../img/textHome.png);
-        background-size: 60%;
-    }
+.menuHome{
+    background-image: url(../img/textHome.png);
+    background-size: 60%;
+}
+  
+.menuWork{
+    background-image: url(../img/textWork.png);
+    background-size: 60%;
+}
     
-    .menuWork{
-        background-image: url(../img/textWork.png);
-        background-size: 60%;
-    }
+.menuAboutMe{
+    background-image: url(../img/textAboutMe.png);
+    background-size: 60%;
+}
     
-    .menuAboutMe{
-        background-image: url(../img/textAboutMe.png);
-        background-size: 60%;
-    }
-    
-    .menuContact{
-        background-image: url(../img/textContact.png);
-        background-size: 60%;
-    }
-    
-    
-    
-    }
-    
-    
-    
-    
-    
+.menuContact{
+    background-image: url(../img/textContact.png);
+    background-size: 60%;
+}
+  
+}/*Cierre del media query*/
+ 
 /*Cambio de estilo al llegar a 768px*/
 @media screen and (min-width: 768px){
+/*Menú pasa a la parte superior de la pantalla*/
 .menuContainer{
     top: 0em;
 }
@@ -174,13 +166,8 @@ html, body{
     box-shadow: inset 0em 0em 1em 0em blue;
 }
 
-
-
-}
+}/*cierre del media query*/
     
-    
-    
-    
-    @media screen and (min-width: 1024px){
+@media screen and (min-width: 1024px){
         
-    }
+}
